# vnext

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  plan.md  release.sh  renovate.json
.github/workflows/: on-pr-quality.yaml  on-push-main-version-and-tag.yaml  on-v-tag-release.yaml  release-on-version-tagged.yaml  tag-for-release.yaml
src/: changelog.rs  cli.rs  constants.rs  deploy_key.rs  error.rs  git.rs  github.rs  lib.rs  logging.rs  main.rs  regex.rs  version.rs  vnext.rs
src/commands/: deploy_key.rs  mod.rs  version.rs  vnext.rs
src/core/: changelog.rs  git.rs  github.rs  mod.rs  version.rs
src/models/: changeset.rs  commit.rs  deploy_key.rs  github.rs  mod.rs  repo.rs  version.rs
src/parsers/: conventional.rs  custom.rs  factory.rs  mod.rs
src/services/: changelog.rs  git.rs  github.rs  mod.rs  version.rs
src/utils/: git.rs  logging.rs  mod.rs  regex.rs
tests/: breaking_change_tests.rs  changelog_formatting_tests.rs  changelog_tests.rs  commit_parsing_tests.rs  current_flag_tests.rs  first_run_tests.rs  github_clone_test.rs  github_test.rs  header_scaling_tests.rs  integration_test.rs  parser_tests.rs  test_helpers.rs  version_tests.rs
