[package]
name = "vnext"
version = "0.12.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
fern = "0.7.1"
git2 = "0.20.0"
include_dir = "0.7.4"
log = "0.4.26"
regex = "1.11.1"
semver = "1.0.23"
serde_json = "1.0"
openssl-sys = { version = "0.9.106", optional = true }

[dev-dependencies]
mockall = "=0.13.1"
tempfile = "=3.20.0"

[features]
vendored = ["openssl-sys/vendored"]
default = []
