[package]
name = "vnext"
version = "1.14.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
fern = "0.7.1"
git2 = "0.20.0"
include_dir = "0.7.4"
log = "0.4.26"
regex = "1.11.1"
semver = "1.0.23"
serde_json = "1.0"
openssl-sys = { version = "0.9.106", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
ssh-key = { version = "0.6.5", features = ["ed25519"] }
tempfile = "3.10.1"
url = "2.5.0"

[dev-dependencies]
mockall = "=0.13.1"
tempfile = "=3.21.0"

[features]
vendored = ["openssl-sys/vendored"]
default = []
